Conexao da JSF com os ManagedBeans realizada

--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -15,5 +15,8 @@
             <p:colorPicker></p:colorPicker>
         </p:panel>
     </h:form>
+    <br />
+    <h:outputText value="#{acessoBean.teste}"/>
+
 </h:body>
 </html>
